feat: footer social media links

--- a/online-zoo/assets/sass-css/components/footer.scss
+++ b/online-zoo/assets/sass-css/components/footer.scss
@@ -2,17 +2,12 @@
 @import "../base/typography";
 @import "../base/buttons";
 
-footer {
-  height: 1000px;
+.footer {
   background-color: $footer;
   display: flex;
   justify-content: center;
   padding-top: 41px;
   color: $white;
-
-  .container {
-    //display: grid;
-  }
 
   .donate-footer-button {
     .donate-footer {
@@ -38,7 +33,54 @@ footer {
   }
 }
 
+// ---------------------GRID--------------
+
+.footer {
+  .container {
+    display: grid;
+    grid-template-columns: 298px 1fr 390px;
+    grid-template-rows: 121px 101px 72px 112px;
+    grid-template-areas: "logo . subscribe"
+                          "donate . ."
+                          "socials . ."
+                          "socials navigation copyright";
+  }
+}
+
+.footer-logo {
+  grid-area: logo;
+}
+
+.donate-footer-button {
+  grid-area: donate;
+
+}
+
+.social-media-list {
+  grid-area: socials;
+}
+
+.navigation-footer {
+  grid-area: navigation;
+  justify-self: end;
+
+}
+
 .subscribe {
+  grid-area: subscribe;
+
+}
+
+.copyright {
+  grid-area: copyright;
+}
+
+//--------------------------------------------------
+
+.subscribe {
+  margin-left: 21px;
+  margin-top: 1px;
+
   p {
     @extend %font-subtitle;
   }
@@ -48,17 +90,31 @@ footer {
   margin-top: 14px;
 
   .input {
+    @extend %font-regular;
     height: 42px;
     border-radius: 2px;
     padding: 10px;
   }
 
   .input-email {
+
     background-color: $footer;
     width: 228px;
     border: 1px solid $orange;
-    margin-right: 10px;
+    margin-right: 6px;
+    color: $white;
 
+    &:focus {
+      outline: none;
+    }
+
+    & .valid {
+      border-color: $green;
+    }
+  }
+
+  .mistake-email {
+    border-color: $red;
   }
 
   .input-submit {
@@ -67,10 +123,32 @@ footer {
     color: $green;
     border: 1px solid $green;
     border-radius: 5px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .mistake-submit {
+    cursor: default;
+    border-color: $red;
+    color: $red;
+
+    &:hover {
+      cursor: default;
+    }
   }
 }
 
+.navigation-footer {
+  margin-top: 40px;
+  margin-right: 10px;
+}
+
 .copyright {
+  justify-self: end;
+  margin-top: 8px;
+
   p {
     @extend %font-thin;
 
@@ -95,29 +173,64 @@ footer {
   align-items: center;
   gap: 12px;
 
+  &:hover {
+    .soc-link {
+      color: $green;
+    }
+
+    .soc-media-title {
+      color: $green;
+    }
+  }
+
+  .soc-link {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: $white;
+    gap: 12px;
+
+    &:hover {
+      .soc-media-item-icon {
+        background-color: $green;
+      }
+
+      .soc-media-title {
+        color: $green;
+      }
+    }
+  }
+
+
   &-icon {
     width: 26px;
     height: 26px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    color: $white;
+    background-color: rgba(196, 196, 196, 0.5);
+    border-radius: 50%;
   }
 
   .icon-facebook {
-    background: no-repeat center url("../../images/icons/facebook.svg");
+    font-size: 15px;
   }
 
   .icon-twitter {
-    background: no-repeat center url("../../images/icons/twitter.svg");
+    font-size: 14px;
+
   }
 
   .icon-instagram {
-    background: no-repeat center url("../../images/icons/instagram.svg");
+    font-size: 16px;
+
   }
 
   .icon-youtube {
-    background: no-repeat center url("../../images/icons/youtube.svg");
+    font-size: 12px;
   }
-
-
-
 }
 
 
