--- a/online-zoo/assets/sass-css/pages/main-page.scss
+++ b/online-zoo/assets/sass-css/pages/main-page.scss
@@ -2,6 +2,7 @@
 @import "../base/typography";
 @import "../base/buttons";
 @import "../components/footer";
+@import "../components/header";
 
 .page {
   width: 100vw;
@@ -12,82 +13,6 @@
 
 .container {
   width: 1160px;
-}
-
-.logo {
-  font-family: "Roboto";
-  width: 82px;
-  height: 52px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  border: 1px solid white;
-  color: $white;
-
-  .logo-header {
-    font-size: 19.0145px;
-    font-weight: 400;
-    line-height: 120%;
-    color: $white;
-    padding: 3.55px 5px;
-    border-radius: 2px;
-    text-align: center;
-
-  }
-}
-
-
-.header {
-  height: 80px;
-  background-color: $black;
-  display: flex;
-  justify-content: center;
-
-  .container {
-    display: flex;
-    align-items: center;
-  }
-}
-
-.bamboo {
-  position: absolute;
-  left: 11.23px;
-  top: 23.64px;
-
-  img {
-    height: 20.98px;
-    display: block;
-  }
-}
-
-.navigation {
-  margin: 0;
-  margin-left: 63px;
-}
-
-.nav-list {
-  padding: 0;
-  display: flex;
-  gap: 58px;
-  list-style: none;
-
-  .nav-item {
-
-    .active {
-      color: $orange;
-    }
-
-    a {
-      color: $white;
-      text-decoration: none;
-
-      &:hover {
-        color: $orange;
-      }
-
-    }
-  }
 }
 
 // ------------WATCH ONLINE
@@ -166,7 +91,7 @@
 
 .backstage {
   height: 605px;
-  background: no-repeat calc(100% + 97px) url("../../images/flower-photo-1.png");
+  background: no-repeat right url("../../images/flower-photo-1.png");
   background-position-y: 15px;
   display: flex;
   justify-content: center;
@@ -217,15 +142,15 @@
   }
 }
 
-// -----------------------------PETS-----------
+/*-----------------------------PETS-----------*/
 
 .pets {
 
   display: flex;
   justify-content: center;
   margin-top: 115px;
-  background: no-repeat calc(100% + 27px) bottom url("../../images/strelitzia.png"),
-  no-repeat -22px bottom url("../../images/palm-photo.png");
+  background: no-repeat right bottom url("../../images/strelitzia.png"),
+  no-repeat left bottom url("../../images/palm-photo.png");
 
   .button {
     width: 62px;
@@ -249,6 +174,8 @@
   }
 }
 
+/*-------cards-----------*/
+
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 366px);
@@ -262,7 +189,41 @@
     border: 1px solid $orange;
     border-radius: 3px;
     overflow: hidden;
+
+    &:hover {
+      .card-img {
+        transform: scale(1.1);
+        opacity: 0.5;
+      }
+
+      .card-info {
+        height: 100px;
+        align-items: flex-start;
+      }
+    }
+
   }
+}
+
+.card-info {
+  display: flex;
+  height: 38.4px;
+  justify-content: space-between;
+  align-items: center;
+  margin: 8px 9px 9px 16px;
+  transition: 0.5s;
+}
+
+.cards-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 2px;
+}
+
+.card-img-container {
+  overflow: hidden;
+  background-color: $black;
 }
 
 .card-img {
@@ -270,11 +231,6 @@
   width: 366px;
   background-size: contain;
   transition: .5s;
-
-  &:hover {
-    transform: scale(1.1);
-
-  }
 }
 
 .card-1 {
@@ -303,11 +259,11 @@
 
 
 .text {
-  .type {
+  .type, .animation h3 {
     @extend %font-button;
   }
 
-  .area {
+  .area, animation p {
     @extend %font-small-paragraph;
     margin-top: -2px;
   }
@@ -320,12 +276,17 @@
 }
 
 
-.card-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 9px 9px 9px 16px;
+/*--------card animation------*/
+.card-item {
+  position: relative;
 }
+
+.animation {
+  position: absolute;
+  top: 0;
+  background-color: rgb(0, 0, 0, 0.5);
+}
+
 
 .choose-button {
   @extend %button-default;
@@ -354,12 +315,6 @@
   justify-content: center;
 }
 
-.cards-container {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-
-}
 
 .icon-arrow-right {
   img {
@@ -403,7 +358,7 @@
 
   .description {
     padding-right: 55px;
-    padding-left: 99px;
+    padding-left: 96px;
   }
 
   h2 {
@@ -427,7 +382,7 @@
   .subtitle-2 {
     @extend %font-regular;
     line-height: 130%;
-    margin-top: 11px;
+    margin-top: 9px;
   }
 
   .subtitle-3 {
@@ -540,12 +495,17 @@
     background-color: #F5F7F6;
     border-radius: 5px;
     margin-top: 20px;
+    cursor: pointer;
 
     .scroll {
       width: 115px;
       height: 6px;
       background-color: $orange-darker;
       border-radius: 5px;
+
+      &:hover {
+        background-color: $green;
+      }
     }
   }
 }
@@ -564,7 +524,7 @@
     height: 387px;
     background-color: $gray-light;
     border-radius: 19px;
-    padding: 13px 15px 19px;
+    padding: 11px 15px 19px;
 
     .card-text {
       @extend %font-small-paragraph;
@@ -618,7 +578,7 @@
     display: flex;
     align-items: center;
     color: #BDBDBD;
-    gap: 6px;
+    gap: 8px;
 
     .dot {
       width: 2px;
@@ -654,6 +614,5 @@
     }
   }
 }
-
 
 
