--- a/online-zoo/assets/sass-css/pages/main-page.css
+++ b/online-zoo/assets/sass-css/pages/main-page.css
@@ -969,12 +969,16 @@
   border-radius: 5px;
   margin-top: 20px;
   cursor: pointer;
+  position: relative;
 }
 .testimonials .scroll-bar .scroll {
   width: 115px;
   height: 6px;
   background-color: #FE9013;
   border-radius: 5px;
+  position: absolute;
+  top: 1px;
+  left: 2px;
 }
 .testimonials .scroll-bar .scroll:hover {
   background-color: #4B9200;
