--- a/online-zoo/assets/sass-css/pages/main-page.scss
+++ b/online-zoo/assets/sass-css/pages/main-page.scss
@@ -496,12 +496,16 @@
     border-radius: 5px;
     margin-top: 20px;
     cursor: pointer;
+    position: relative;
 
     .scroll {
       width: 115px;
       height: 6px;
       background-color: $orange-darker;
       border-radius: 5px;
+      position: absolute;
+      top: 1px;
+      left: 2px;
 
       &:hover {
         background-color: $green;
