feat: added hover and checked state to donate interactive section

--- a/online-zoo/assets/sass-css/components/footer.scss
+++ b/online-zoo/assets/sass-css/components/footer.scss
@@ -247,6 +247,10 @@
 }
 
 .copyright {
+  display: block;
+  text-decoration: none;
+  color: $white;
+
   &:hover {
     color: $green;
     text-decoration: underline;
