--- a/online-zoo/assets/fonts/icon-font.css
+++ b/online-zoo/assets/fonts/icon-font.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icons';
-  src:  url('icon-font/icons.eot?hzp4y');
-  src:  url('icon-font/icons.eot?hzp4y#iefix') format('embedded-opentype'),
-    url('icon-font/icons.ttf?hzp4y') format('truetype'),
-    url('icon-font/icons.woff?hzp4y') format('woff'),
-    url('icon-font/icons.svg?hzp4y#icons') format('svg');
+  src:  url('icon-font/icons.eot?i4cssc');
+  src:  url('icon-font/icons.eot?i4cssc#iefix') format('embedded-opentype'),
+    url('icon-font/icons.ttf?i4cssc') format('truetype'),
+    url('icon-font/icons.woff?i4cssc') format('woff'),
+    url('icon-font/icons.svg?i4cssc#icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-dollar:before {
+  content: "\e904";
+}
 .icon-youtube:before {
   content: "\e900";
 }
