--- a/online-zoo/assets/sass-css/base/colors.scss
+++ b/online-zoo/assets/sass-css/base/colors.scss
@@ -13,6 +13,12 @@ $white: #FFFFFF;
 $footer: #111115;
 
 
-// hover
+$peach: rgba(255, 255, 255, 0.52);
 
+//gradients
+$pink-orange-gradient:  linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+$orange-gradient: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+
+
+// hover
 $orange-hover: #E47209;
