--- a/react-ts-app/src/assets/fonts/Optima/stylesheet.css
+++ b/react-ts-app/src/assets/fonts/Optima/stylesheet.css
@@ -25,3 +25,11 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Optima LT Std';
+    src: url('OptimaLTStd-Bold.woff2') format('woff2'),
+    url('OptimaLTStd-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
