--- a/react-ts-app/src/components/Header/header.module.scss
+++ b/react-ts-app/src/components/Header/header.module.scss
@@ -1,9 +1,11 @@
 @use "./src/stylesheets/mixins/mixins";
+@use "./src/stylesheets/variables/colors";
 
 .header {
   @include mixins.center-content;
   font-family: 'karla', sans-serif;
   padding: 40px 0;
+  border-bottom: 1px solid colors.$transparent-black;
 }
 
 .container {
