--- a/react-ts-app/src/stylesheets/mixins/mixins.scss
+++ b/react-ts-app/src/stylesheets/mixins/mixins.scss
@@ -4,6 +4,11 @@
   align-items: center;
 }
 
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 @mixin link-style-reset {
   text-decoration: none;
   color: black;
