--- a/react-ts-app/src/stylesheets/variables/colors.scss
+++ b/react-ts-app/src/stylesheets/variables/colors.scss
@@ -1,3 +1,8 @@
 $black: black;
 $white: white;
-$gray: rgba(0, 0, 0, 0.45);
+$transparent-black: rgba(0, 0, 0, 0.1);
+$gray: #65635F;
+$lightGray: #8d8d8d;
+$offWhite: #E7E7E1;
+$offWhiteLighter: #F4F4F2;
+$red: #EF2B2B;
