fix: link styles

--- a/react-ts-app/src/components/Header/header.module.scss
+++ b/react-ts-app/src/components/Header/header.module.scss
@@ -21,6 +21,7 @@
   line-height: 140%;
   @include mixins.center-content;
   @include mixins.link-style-reset;
+  display: flex;
 
   &:hover {
     cursor: pointer;
