--- a/react-ts-app/src/components/NotFound/not-found.module.scss
+++ b/react-ts-app/src/components/NotFound/not-found.module.scss
@@ -9,7 +9,7 @@
   font-family: 'Karla', sans-serif;
   font-size: 25px;
   background-color: colors.$offWhiteLighter;
-  background-image: url("../../assets/images/lines.svg");
+  background-image: url('../../assets/images/lines.svg');
   flex: 1 1 auto;
   align-items: center;
 
@@ -25,12 +25,11 @@
 
   &__details {
     margin-top: 20px;
-
   }
 }
 
 .image {
-background-image: url("../../assets/images/404.png");
+  background-image: url('../../assets/images/404.png');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
