--- a/react-ts-app/src/stylesheets/variables/colors.scss
+++ b/react-ts-app/src/stylesheets/variables/colors.scss
@@ -1,8 +1,8 @@
 $black: black;
 $white: white;
 $transparent-black: rgba(0, 0, 0, 0.1);
-$gray: #65635F;
+$gray: #65635f;
 $lightGray: #8d8d8d;
-$offWhite: #E7E7E1;
-$offWhiteLighter: #F4F4F2;
-$red: #EF2B2B;
+$offWhite: #e7e7e1;
+$offWhiteLighter: #f4f4f2;
+$red: #ef2b2b;
