--- a/react-ts-app/src/components/Home/home.module.scss
+++ b/react-ts-app/src/components/Home/home.module.scss
@@ -1,5 +1,5 @@
-@use "./src/stylesheets/mixins/mixins";
-@use "./src/stylesheets/variables/colors";
+@use './src/stylesheets/mixins/mixins';
+@use './src/stylesheets/variables/colors';
 
 .main {
   @include mixins.center-content;
