--- a/react-ts-app/src/components/Navigation/NavItem/nav-item.module.scss
+++ b/react-ts-app/src/components/Navigation/NavItem/nav-item.module.scss
@@ -1,5 +1,5 @@
-@use "./src/stylesheets/mixins/mixins";
-@use "./src/stylesheets/variables/colors";
+@use './src/stylesheets/mixins/mixins';
+@use './src/stylesheets/variables/colors';
 
 .nav-item {
 }
@@ -18,5 +18,3 @@
     border-bottom: 1px solid colors.$black;
   }
 }
-
-
