feat: add form page

--- a/react-ts-app/src/stylesheets/variables/colors.scss
+++ b/react-ts-app/src/stylesheets/variables/colors.scss
@@ -1,8 +1,15 @@
 $black: black;
 $white: white;
 $transparent-black: rgba(0, 0, 0, 0.1);
+$transparent-gray: #c5c5c5;
 $gray: #65635f;
 $lightGray: #8d8d8d;
 $offWhite: #e7e7e1;
 $offWhiteLighter: #f4f4f2;
 $red: #ef2b2b;
+$lightGreen: #73d273;
+$brightGreen: #b0e792;
+$salmon: #d65d4a;
+$beige: #f8d594;
+$green: #729370;
+$blue: #245c8a;
