--- a/react-ts-app/src/components/Cards/cards.module.scss
+++ b/react-ts-app/src/components/Cards/cards.module.scss
@@ -6,7 +6,7 @@
   &__container {
     width: 80%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 30px;
   }
 }
