--- a/react-ts-app/src/components/Home/home.module.scss
+++ b/react-ts-app/src/components/Home/home.module.scss
@@ -17,14 +17,23 @@
   &__heading {
     font-size: 52px;
     font-weight: normal;
-  }
-}
 
-.search-bar {
-  font-family: 'Optima LT Std', sans-serif;
-  display: flex;
-  width: 100%;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 10px;
+    @media screen and (max-width: 600px) {
+      text-align: center;
+    }
+  }
+
+  &__searchbar {
+    font-family: 'Optima LT Std', sans-serif;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+
+    @media screen and (max-width: 600px) {
+      flex-direction: column;
+      align-items: flex-end;
+    }
+  }
 }
