--- a/react-ts-app/src/components/Form/form.module.scss
+++ b/react-ts-app/src/components/Form/form.module.scss
@@ -61,6 +61,10 @@
         gap: 10px;
       }
     }
+
+    &_radio {
+      align-items: center;
+    }
   }
 }
 
@@ -123,9 +127,9 @@
 }
 
 .switch-box label:first-of-type {
-  border-radius: 4px 0 0 4px;
+  border-radius: 6px 0 0 6px;
 }
 
 .switch-box label:last-of-type {
-  border-radius: 0 4px 4px 0;
+  border-radius: 0 6px 6px 0;
 }
