--- a/react-ts-app/src/components/Like/like.module.scss
+++ b/react-ts-app/src/components/Like/like.module.scss
@@ -5,23 +5,23 @@
   gap: 2px;
   align-items: center;
   grid-area: like;
+}
 
-  &__btn {
-    background: transparent;
-    border: none;
+.button {
+  background: transparent;
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin-right: 5px;
+
+  &:focus-visible {
     outline: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    margin-right: 5px;
+  }
 
-    &_liked {
-    }
-
-    &:focus-visible {
-      outline: none;
-    }
+  &_liked {
   }
 
   &__icon {
