--- a/react-ts-app/src/components/About/about.module.scss
+++ b/react-ts-app/src/components/About/about.module.scss
@@ -1,9 +1,8 @@
-@use './src/stylesheets/variables/colors';
-@use './src/stylesheets/variables/numbers';
-@use './src/stylesheets/mixins/mixins';
+@use '../../stylesheets/variables/colors';
+@use '../../stylesheets/variables/numbers';
+@use '../../stylesheets/mixins/mixins';
 
 .main {
-  flex: 1 1 auto;
   display: flex;
   justify-content: center;
   margin-top: 50px;
