--- a/react-ts-app/src/components/Form/form.module.scss
+++ b/react-ts-app/src/components/Form/form.module.scss
@@ -1,5 +1,5 @@
-@use './src/stylesheets/variables/colors';
-@use './src/stylesheets/mixins/mixins';
+@use '../../stylesheets/variables/colors';
+@use '../../stylesheets/mixins/mixins';
 
 .form {
   @include mixins.flex-column;
