feat: implement cards, big card & modal components

--- a/react-ts-app/src/stylesheets/variables/colors.scss
+++ b/react-ts-app/src/stylesheets/variables/colors.scss
@@ -13,3 +13,11 @@ $salmon: #d65d4a;
 $beige: #f8d594;
 $green: #729370;
 $blue: #245c8a;
+
+$rick-blue: #B2DAE4;
+$morty-yellow: #F8FE76;
+$morty-pink: #F07E96;
+$plumbus-pink: #F9D9CA;
+$summers-hair: #F29901;
+$portal-green: #39FF14;
+$solenya: #006400;
