--- a/react-ts-app/src/components/Exhibition/RickMorty/rick-morty.module.scss
+++ b/react-ts-app/src/components/Exhibition/RickMorty/rick-morty.module.scss
@@ -8,11 +8,13 @@
 }
 
 .text {
-  width: 75%;
-  @include mixins.flex-column;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
   align-items: center;
   margin-top: 50px;
+  text-align: center;
 
   &__heading {
     font-size: 30px;
