--- a/react-ts-app/src/stylesheets/mixins/mixins.scss
+++ b/react-ts-app/src/stylesheets/mixins/mixins.scss
@@ -14,3 +14,9 @@
   color: black;
   display: block;
 }
+
+@mixin button-style-reset {
+  border: 0;
+  padding: 0;
+  background: none repeat scroll 0 0 transparent;
+}
