feat: remove unnecessary code

--- a/react-ts-app/src/components/Modal/modal.module.scss
+++ b/react-ts-app/src/components/Modal/modal.module.scss
@@ -27,7 +27,7 @@
     padding: 30px;
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: fit-content;
     height: fit-content;
     position: relative;
   }
